First commited as before_4408_rev1